Add feature quote
Co-authored-by: Genbu Hase <hasegenbu@gmail.com>
Co-authored-by: wakin <8th.mail@gmail.com>

[New] Implement a feature of quote (by Genbu Hase)

remake quote feature (by wakin)

Fix quote nesting at once, add quote_id
Fix boost target to be quoted if boosted
Add feature_quote to instance API
Add confirmation of overwriting of input content when quoting
Fix to reject status quotations other than public and unlisted
Add index to statuses quote_id
Change not to delete the element specified in invisible
Compatible with Misskey quote
Apply quote by parsing post body
Add "Show poll" link to quoted poll
Fix an avatar icon size of the status quoted on the public page
Fix tooltip 'cannot be quoted'
Fix quoted audio
Fix PictureInPicture to work in quotes
Fix to hide mute and blocked quotes
Add quote button in PiP
Fix Open handler in quote media
fix rtl in quote_indicator
Fix expand video on public page for quote
Fix modal footer to react to quoted posts
Fix missing reblog_of_quote
Fix missing frameRate
Fix not hiding quoted unlisted status in non public timeline
Fix quote on public stream
Fix to dismiss quote where the target post was deleted
Remove unneeded code from quote
Add noopener and noreferrer to quote remote links
Fix quote to be compatible for Mastodon v3.5
Change NoteObject's quoteURL to quoteUri and introduced fedibird namespace in @context
Add a quote URL to the search target string
Add show quote button setting

--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -57,6 +57,7 @@ ja:
         setting_hide_network: フォローとフォロワーの情報がプロフィールページで見られないようにします
         setting_noindex: 公開プロフィールおよび各投稿ページに影響します
         setting_show_application: 投稿するのに使用したアプリが投稿の詳細ビューに表示されるようになります
+        setting_show_quote_button: アクションバーへボタンを表示するかどうかの設定です。引用機能の有効・無効を切り替えるものではありません
         setting_use_blurhash: ぼかしはメディアの色を元に生成されますが、細部は見えにくくなっています
         setting_use_pending_items: 新着があってもタイムラインを自動的にスクロールしないようにします
         username: あなたのユーザー名は%{domain}の中で重複していない必要があります
@@ -211,6 +212,7 @@ ja:
         setting_noindex: 検索エンジンによるインデックスを拒否する
         setting_reduce_motion: アニメーションの動きを減らす
         setting_show_application: 送信したアプリを開示する
+        setting_show_quote_button: 引用ボタンをアクションバーに表示する
         setting_system_font_ui: システムのデフォルトフォントを使う
         setting_theme: サイトテーマ
         setting_trends: 本日のトレンドタグを表示する
