--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -57,6 +57,7 @@ en:
         setting_hide_network: Who you follow and who follows you will be hidden on your profile
         setting_noindex: Affects your public profile and post pages
         setting_show_application: The application you use to post will be displayed in the detailed view of your posts
+        setting_show_quote_button: Selects whether to display the button on the action bar. It does not enable/disable the citation function.
         setting_use_blurhash: Gradients are based on the colors of the hidden visuals but obfuscate any details
         setting_use_pending_items: Hide timeline updates behind a click instead of automatically scrolling the feed
         username: Your username will be unique on %{domain}
@@ -211,6 +212,7 @@ en:
         setting_noindex: Opt-out of search engine indexing
         setting_reduce_motion: Reduce motion in animations
         setting_show_application: Disclose application used to send posts
+        setting_show_quote_button: Show the quote button on the action bar
         setting_system_font_ui: Use system's default font
         setting_theme: Site theme
         setting_trends: Show today's trends
