--- a/config/locales/simple_form.ast.yml
+++ b/config/locales/simple_form.ast.yml
@@ -26,7 +26,7 @@ ast:
         setting_display_media_show_all: Amosalu siempres
         setting_hide_network: Les persones que sigas ya les que te sigan nun van apaecer nel to perfil
         setting_show_application: L'aplicación qu'uses pa espublizar apaez na vista detallada de los tos artículos
-        username: 'El nome d''usuariu va ser únicu en: %{domain}'
+        setting_use_blurhash: Los dilíos básense nos colores del conteníu multimedia anubríu mas desenfonca los detalles
       featured_tag:
         name: 'Equí tán dalgunes de les etiquetes qu''usesti apocayá:'
       form_admin_settings:
