--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -60,7 +60,7 @@ en:
         setting_show_quote_button: Selects whether to display the button on the action bar. It does not enable/disable the citation function.
         setting_use_blurhash: Gradients are based on the colors of the hidden visuals but obfuscate any details
         setting_use_pending_items: Hide timeline updates behind a click instead of automatically scrolling the feed
-        username: Your username will be unique on %{domain}
+        username: You can use letters, numbers, and underscores
         whole_word: When the keyword or phrase is alphanumeric only, it will only be applied if it matches the whole word
       domain_allow:
         domain: This domain will be able to fetch data from this server and incoming data from it will be processed and stored
